# ChangeLog for gnome-extra/at-spi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.185 2009/04/28 14:38:14 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> at-spi-1.24.1.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> at-spi-1.24.1:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> at-spi-1.24.1.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> at-spi-1.24.1.ebuild:
  Stable on sparc, bug #260063

  24 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> at-spi-1.20.1.ebuild,
  at-spi-1.22.1.ebuild, at-spi-1.24.1.ebuild:
  Add gnome-common dep; bug #226453

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> at-spi-1.24.1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> at-spi-1.24.1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> at-spi-1.24.1.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> at-spi-1.24.1.ebuild:
  Marking at-spi-1.24.1 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> at-spi-1.24.1.ebuild:
  Marking at-spi-1.24.1 ppc64 stable for bug 260063

  20 Jan 2009; Raúl Porcel <armin76@gentoo.org> at-spi-1.24.1.ebuild:
  Add ~sh

*at-spi-1.24.1 (21 Dec 2008)

  21 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org> +at-spi-1.24.1.ebuild:
  Bump to 1.24.1. Bug fix, allow apps to not load at-spi module on startup.

  13 Nov 2008; Brent Baude <ranger@gentoo.org> at-spi-1.22.1.ebuild:
  Marking at-spi-1.22.1 ppc64 stable for bug 236971

*at-spi-1.24.0 (30 Sep 2008)

  30 Sep 2008; Mart Raudsepp <leio@gentoo.org>
  -files/at-spi-1.18.0-ior-leak.patch,
  -files/at-spi-1.18.1-focus-tracker-leak.patch,
  -files/at-spi-1.18.1-tests.patch, -at-spi-1.18.1-r1.ebuild,
  -at-spi-1.22.0.ebuild, +at-spi-1.24.0.ebuild:
  New version with small changes. Remove old
